--- a/Application/Home/View/WeddingStore/index.html
+++ b/Application/Home/View/WeddingStore/index.html
@@ -1,159 +1,4 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Wedding Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--//theme-style-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wedding Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- start menu -->
-<script src="js/simpleCart.min.js"> </script>
-<!-- start menu -->
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
-<script>$(document).ready(function(){$(".memenu").memenu();});</script>	
-<!-- /start menu -->
-</head>
-<body> 
-<!--header-->	
-<div class="top_bg">
-	<div class="container">
-		<div class="header_top-sec">
-			<div class="top_right">
-				<ul>
-					<li><a href="#">help</a></li>|
-					<li><a href="contact.html">Contact</a></li>|
-					<li><a href="login.html">Track Order</a></li>
-				</ul>
-			</div>
-			<div class="top_left">
-				<ul>
-					<li class="top_link">Email:<a href="mailto:info@example.com">mail@example.com</a></li>|
-					<li class="top_link"><a href="login.html">My Account</a></li>					
-				</ul>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-</div>
-<div class="header-top">
-	 <div class="header-bottom">
-		 <div class="container">			
-				<div class="logo">
-					<a href="index.html"><h1>Wedding Store</h1></a>
-				</div>
-			 <!---->
-		 
-			 <div class="top-nav">
-				<ul class="memenu skyblue"><li class="active"><a href="index.html">Home</a></li>
-					<li class="grid"><a href="#">Wedding</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Style Zone</h4>
-									<ul>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Style Videos</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Levis</a></li>
-										<li><a href="product.html">Persol</a></li>
-										<li><a href="product.html">Nike</a></li>
-										<li><a href="product.html">Edwin</a></li>
-										<li><a href="product.html">New Balance</a></li>
-										<li><a href="product.html">Jack & Jones</a></li>
-										<li><a href="product.html">Paul Smith</a></li>
-										<li><a href="product.html">Ray-Ban</a></li>
-										<li><a href="product.html">Wood Wood</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="grid"><a href="#">Bride Style</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Style Zone</h4>
-									<ul>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Style Videos</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Levis</a></li>
-										<li><a href="product.html">Persol</a></li>
-										<li><a href="product.html">Nike</a></li>
-										<li><a href="product.html">Edwin</a></li>
-										<li><a href="product.html">New Balance</a></li>
-										<li><a href="product.html">Jack & Jones</a></li>
-										<li><a href="product.html">Paul Smith</a></li>
-										<li><a href="product.html">Ray-Ban</a></li>
-										<li><a href="product.html">Wood Wood</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="grid"><a href="typo.html">Typo</a></li>
-					<li class="grid"><a href="contact.html">Contact</a></li>
-				</ul>
-				<div class="clearfix"> </div>
-			 </div>
-			 <!---->
+<include file="WeddingStore/header" title="婚礼商店"/>
 			 <div class="cart box_1">
 				 <a href="checkout.html">
 					<h3> <div class="total">
@@ -164,7 +9,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 	<div class="clearfix"> </div>
 			 </div>
 			 <div class="clearfix"> </div>
-			 <!---->			 
+			 <!---->
 			 </div>
 			<div class="clearfix"> </div>
 	  </div>
@@ -195,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="col-md-4 bride-grid">
 			 <div class="content-grid l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/b1.jpg" alt=""/>
+						<img src="__PUBLIC__/Home/images/b1.jpg" alt=""/>
 						<figcaption>
 							<h4>Nullam molestie </h4>
 							<p>In sit amet sapien eros Integer in tincidunt labore et dolore magna aliqua</p>																
@@ -206,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			 <div class="content-grid l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/b2.jpg" alt=""/>
+						<img src="__PUBLIC__/Home/images/b2.jpg" alt=""/>
 						<figcaption>
 							<h4>Nullam molestie </h4>
 							<p>In sit amet sapien eros Integer in tincidunt labore et dolore magna aliqua</p>																
@@ -218,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 		 <div class="col-md-4 bride-grid">
 				<div class="content-grid l-grids">
-						<img src="images/brid.jpg" alt=""/>
+						<img src="__PUBLIC__/Home/images/brid.jpg" alt=""/>
 						
 				 <h3>Bridesmade Dresses</h3>
 			 </div>
@@ -226,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="col-md-4 bride-grid">
 			 <div class="content-grid l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/b3.jpg" alt=""/>
+						<img src="__PUBLIC__/Home/images/b3.jpg" alt=""/>
 						<figcaption>
 							<h4>Nullam molestie </h4>
 							<p>In sit amet sapien eros Integer in tincidunt labore et dolore magna aliqua</p>																
@@ -237,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			 <div class="content-grid l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/b4.jpg" alt=""/>
+						<img src="__PUBLIC__/Home/images/b4.jpg" alt=""/>
 						<figcaption>
 							<h4>Nullam molestie </h4>
 							<p>In sit amet sapien eros Integer in tincidunt labore et dolore magna aliqua</p>																
@@ -256,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <h3>Featured Products</h3>
 		 <div class="feature-grids">
 			 <div class="col-md-3 feature-grid jewel">
-				 <a href="product.html"><img src="images/f1.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/f1.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -271,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="product.html"><img src="images/f2.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/f2.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 68000</p>
@@ -286,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid jewel">
-				 <a href="product.html"><img src="images/f3.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/f3.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Wedding Ceramic Pot </h4>
 						 <p>Rs 1200</p>
@@ -301,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="product.html"><img src="images/f4.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/f4.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -319,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 		 <div class="feature-grids">
 			 <div class="col-md-3 feature-grid jewel">
-				 <a href="product.html"><img src="images/p7.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/p7.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -334,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="product.html"><img src="images/p11.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/p11.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -349,7 +194,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid jewel">
-				 <a href="product.html"><img src="images/p12.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/p12.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -364,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="product.html"><img src="images/f2.jpg" alt=""/>	
+				 <a href="product.html"><img src="__PUBLIC__/Home/images/f2.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -389,7 +234,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="arrival-grids">			 
 			 <ul id="flexiselDemo1">
 				 <li>
-					 <a href="product.html"><img src="images/a1.jpg" alt=""/>	
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/a1.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Fusion Black Polyester Suits</h4>
 						 <p>Rs 12000</p>
@@ -404,7 +249,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 				 </li>
 				 <li>
-					 <a href="product.html"><img src="images/a2.jpg" alt=""/>
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/a2.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>Vogue4All White Net Gowns</h4>
 						 <p>Rs 14000</p>
@@ -419,7 +264,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 				 </li>
 				 <li>
-					 <a href="product.html"><img src="images/a3.jpg" alt=""/>	
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/a3.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>Platinum Waist Coat Set Navy</h4>
 						 <p>Rs 4000</p>
@@ -434,7 +279,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>
 				 </li>
 				 <li>
-				    <a href="product.html"> <img src="images/a4.jpg" alt=""/>	
+				    <a href="product.html"> <img src="__PUBLIC__/Home/images/a4.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>La Fanatise White Net Gowns</h4>
 						 <p>Rs 18000</p>
@@ -475,7 +320,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				});
 				});
 				</script>
-				<script type="text/javascript" src="js/jquery.flexisel.js"></script>			 
+				<script type="text/javascript" src="__PUBLIC__/Home/js/jquery.flexisel.js"></script>
 		  </div>
 	 </div>
 </div>
@@ -555,6 +400,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="container">
 			 <p>Copyright © 2015 Wedding Store All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 		 </div>
-</div>		 
+</div>
 </body>
 </html>
