--- a/Application/Home/View/WeddingStore/single.html
+++ b/Application/Home/View/WeddingStore/single.html
@@ -1,161 +1,4 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Wedding Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Single :: w3layouts</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--//theme-style-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wedding Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- start menu -->
-<script src="js/simpleCart.min.js"> </script>
-<!-- start menu -->
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
-<script>$(document).ready(function(){$(".memenu").memenu();});</script>	
-<!-- /start menu -->
-<link href="css/form.css" rel="stylesheet" type="text/css" media="all" />
-
-</head>
-<body> 
-<!--header-->	
-<div class="top_bg">
-	<div class="container">
-		<div class="header_top-sec">
-			<div class="top_right">
-				<ul>
-					<li><a href="#">help</a></li>|
-					<li><a href="contact.html">Contact</a></li>|
-					<li><a href="login.html">Track Order</a></li>
-				</ul>
-			</div>
-			<div class="top_left">
-				<ul>
-					<li class="top_link">Email:<a href="mailto:info@example.com">mail@example.com</a></li>|
-					<li class="top_link"><a href="login.html">My Account</a></li>				
-				</ul>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-</div>
-<div class="header-top">
-	 <div class="header-bottom">
-		 <div class="container">			
-				<div class="logo">
-					<a href="index.html"><h1>Wedding Store</h1></a>
-				</div>
-			 <!---->
-		 
-			 <div class="top-nav">
-				<ul class="memenu skyblue"><li class="active"><a href="index.html">Home</a></li>
-					<li class="grid"><a href="#">Wedding</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Style Zone</h4>
-									<ul>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Style Videos</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Levis</a></li>
-										<li><a href="product.html">Persol</a></li>
-										<li><a href="product.html">Nike</a></li>
-										<li><a href="product.html">Edwin</a></li>
-										<li><a href="product.html">New Balance</a></li>
-										<li><a href="product.html">Jack & Jones</a></li>
-										<li><a href="product.html">Paul Smith</a></li>
-										<li><a href="product.html">Ray-Ban</a></li>
-										<li><a href="product.html">Wood Wood</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="grid"><a href="#">Bride Style</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Style Zone</h4>
-									<ul>
-										<li><a href="product.html">Men</a></li>
-										<li><a href="product.html">Women</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Style Videos</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Levis</a></li>
-										<li><a href="product.html">Persol</a></li>
-										<li><a href="product.html">Nike</a></li>
-										<li><a href="product.html">Edwin</a></li>
-										<li><a href="product.html">New Balance</a></li>
-										<li><a href="product.html">Jack & Jones</a></li>
-										<li><a href="product.html">Paul Smith</a></li>
-										<li><a href="product.html">Ray-Ban</a></li>
-										<li><a href="product.html">Wood Wood</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="grid"><a href="typo.html">Typo</a></li>
-					<li class="grid"><a href="contact.html">Contact</a></li>
-				</ul>
-				<div class="clearfix"> </div>
-			 </div>
-			 <!---->
+<include file="WeddingStore/header" title="婚礼商店"/>
 			 <div class="cart box_1">
 				 <a href="checkout.html">
 					<h3> <div class="total">
@@ -184,22 +27,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <div class="flexslider">
 							<ul class="slides">
 								<li data-thumb="images/s11.jpeg">
-									<img src="images/s11.jpeg" />
+									<img src="__PUBLIC__/Home/images/s11.jpeg" />
 								</li>
 								<li data-thumb="images/s22.jpeg">
-									<img src="images/s22.jpeg" />
+									<img src="__PUBLIC__/Home/images/s22.jpeg" />
 								</li>
 								<li data-thumb="images/s33.jpeg">
-									<img src="images/s33.jpeg" />
+									<img src="__PUBLIC__/Home/images/s33.jpeg" />
 								</li>
 								<li data-thumb="images/s44.jpeg">
-									<img src="images/s44.jpeg" />
+									<img src="__PUBLIC__/Home/images/s44.jpeg" />
 								</li>
 							</ul>
 						</div>
 						<!-- FlexSlider -->
-						  <script defer src="js/jquery.flexslider.js"></script>
-						<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+						  <script defer src="__PUBLIC__/Home/js/jquery.flexslider.js"></script>
+						<link rel="stylesheet" href="__PUBLIC__/Home/css/flexslider.css" type="text/css" media="screen" />
 
 							<script>
 						// Can also be used with $(document).ready()
@@ -340,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="arrival-grids">			 
 			 <ul id="flexiselDemo1">
 				 <li>
-					 <a href="product.html"><img src="images/p2.jpg" alt=""/>	
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/p2.jpg" alt=""/>
 					 <div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 12000</p>
@@ -352,7 +195,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>				 
 				 </li>
 				 <li>
-					 <a href="product.html"><img src="images/p3.jpg" alt=""/>
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/p3.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 14000</p>
@@ -364,7 +207,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>						 
 				 </li>
 				 <li>
-					 <a href="product.html"><img src="images/p4.jpg" alt=""/>	
+					 <a href="product.html"><img src="__PUBLIC__/Home/images/p4.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 4000</p>
@@ -376,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </div></a>						 
 				 </li>
 				 <li>
-				    <a href="product.html"> <img src="images/p5.jpg" alt=""/>	
+				    <a href="product.html"> <img src="__PUBLIC__/Home/images/p5.jpg" alt=""/>
 						<div class="arrival-info">
 						 <h4>Jewellerys #1</h4>
 						 <p>Rs 18000</p>
@@ -414,7 +257,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				});
 				});
 				</script>
-							<script type="text/javascript" src="js/jquery.flexisel.js"></script>	  
+							<script type="text/javascript" src="__PUBLIC__/Home/js/jquery.flexisel.js"></script>
 				 </div>
 			</div>			
 			<!---->
@@ -426,7 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <div class="tab1">
 							 <ul class="place">								
 								 <li class="sort">Fashion</li>
-								 <li class="by"><img src="images/do.png" alt=""></li>
+								 <li class="by"><img src="__PUBLIC__/Home/images/do.png" alt=""></li>
 									<div class="clearfix"> </div>
 							  </ul>
 							 <div class="single-bottom">						
@@ -440,7 +283,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  <div class="tab2">
 							 <ul class="place">								
 								 <li class="sort">Women Ethnic Wear</li>
-								 <li class="by"><img src="images/do.png" alt=""></li>
+								 <li class="by"><img src="__PUBLIC__/Home/images/do.png" alt=""></li>
 									<div class="clearfix"> </div>
 							  </ul>
 							 <div class="single-bottom">						
@@ -451,7 +294,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  <div class="tab3">
 							 <ul class="place">								
 								 <li class="sort">Personal Care</li>
-								 <li class="by"><img src="images/do.png" alt=""></li>
+								 <li class="by"><img src="__PUBLIC__/Home/images/do.png" alt=""></li>
 									<div class="clearfix"> </div>
 							  </ul>
 							 <div class="single-bottom">						
@@ -461,7 +304,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  <div class="tab4">
 							 <ul class="place">								
 								 <li class="sort">Jewellery</li>
-								 <li class="by"><img src="images/do.png" alt=""></li>
+								 <li class="by"><img src="__PUBLIC__/Home/images/do.png" alt=""></li>
 									<div class="clearfix"> </div>
 							  </ul>
 							 <div class="single-bottom">						
@@ -473,7 +316,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  <div class="tab5">
 							 <ul class="place">								
 								 <li class="sort">Specials</li>
-								 <li class="by"><img src="images/do.png" alt=""></li>
+								 <li class="by"><img src="__PUBLIC__/Home/images/do.png" alt=""></li>
 									<div class="clearfix"> </div>
 							  </ul>
 							 <div class="single-bottom">						
@@ -556,8 +399,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  </ul>
 				   </section>
 				   <!---->
-					 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-					 <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+					 <script type="text/javascript" src="__PUBLIC__/Home/js/jquery-ui.min.js"></script>
+					 <link rel="stylesheet" type="text/css" href="__PUBLIC__/Home/css/jquery-ui.css">
 					<script type='text/javascript'>//<![CDATA[ 
 					$(window).load(function(){
 					 $( "#slider-range" ).slider({
@@ -678,11 +521,4 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>		
 	 </div>
 </div>
-<!---->
- <div class="copywrite">
-	 <div class="container">
-			 <p>Copyright © 2015 Wedding Store All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		 </div>
-</div>	
-</body>
-</html>
+<inclide file="WeddingStore/footer"/>
