--- a/Application/Admin/View/Mail/mail_compose.html
+++ b/Application/Admin/View/Mail/mail_compose.html
@@ -46,6 +46,13 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label class="col-sm-2 control-label">添加附件：</label>
+                                <div class="col-sm-10">
+                                    <div id="queue"></div>
+                                    <input id="file_upload" name="file_upload" type="file" multiple="true">
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label class="col-sm-2 control-label">内容：</label>
                                 <div class="col-sm-10">
                                     <script type="text/plain" id="myEditor" style="width:1000px;height:240px;" name="content">
@@ -66,8 +73,20 @@
     </div>
 <include file="Public/js"/>
     <script>
-        var um = UM.getEditor('myEditor');
-        $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green"})});
+
+        $(function() {
+            $('#file_upload').uploadify({
+                'swf'      : '__PUBLIC__/Admin/uploadify/uploadify.swf',
+                'uploader' : '__CONTROLLER__/upload',
+                'buttonText' : '添加附件',
+                'onUploadSuccess' : function (file, data, response) {
+                    var images = eval(data);
+                    img(images);
+                }
+            });
+            var um = UM.getEditor('myEditor');
+            $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green"})});
+        });
     </script>
 </body>
 </html>
